Fixed difficulty selector BUGFIX

--- a/src/app/recipies/add-recipe/add-recipe.component.html
+++ b/src/app/recipies/add-recipe/add-recipe.component.html
@@ -42,6 +42,7 @@
                 mat-button
                 matStepperNext
                 class="mat-card-actions_buttons"
+                (click)="set_difficulty(difficulty.value)"
               >
                 Weiter
               </button>
