--- a/src/app/recipies/add-recipe/add-recipe.component.html
+++ b/src/app/recipies/add-recipe/add-recipe.component.html
@@ -185,7 +185,7 @@
           </p>
           <h3>Zubereitung</h3>
           <p>
-            <strong>Schwierigkeit:</strong>{{ difficulty.name }}
+            <strong>Schwierigkeit:</strong>{{ _difficulty }}
             <strong>Erforderliche Zeit:</strong> {{ requiredTime }} Minuten
           </p>
           <p>
