--- a/src/app/basket/view-basket/view-basket.component.css
+++ b/src/app/basket/view-basket/view-basket.component.css
@@ -27,3 +27,11 @@ h2 {
   font-family: "Amatic SC", cursive;
   font-size: 50px;
 }
+.mat-card-actions_buttons {
+  height: 3%;
+  margin-right: 2%;
+  border: 1.5px;
+  border-style: solid;
+  border-color: black;
+  font-family: "Courgette", cursive;
+}
